# bain-fork

./: .gitmodules  Cargo.toml  Makefile  README.md  default.nix  flake.nix  nohup.out
src/: battery.rs  color_schemes.rs  main.rs
