[package]
name = "ruin"
version = "1.6.0"
edition = "2021"
license = "MIT"
description = "Battery indicator as wallpaper"
repository = "https://github.com/unixpariah/ruin.git"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
image = "0.24.7"
reqwest = "0.11.22"
wlrs = "2.x.x"
dirs = "5.0.1"
