[package]
name = "ruin"
version = "1.6.1"
edition = "2021"
license = "MIT"
description = "Battery indicator as wallpaper"
repository = "https://github.com/unixpariah/ruin.git"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
image = "0.24.7"
wlrs = { path = "wlrs" }
dirs = "5.0.1"
inotify = "0.10.2"
